Sutter Health/src/objects/PDIPortalHomePage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DataValue1__c</fullName>
        <label>DataValue1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DataValue2__c</fullName>
        <label>DataValue2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PDI Portal Home Page</label>
</CustomObject>